read and write email_credentials table
